dsl/parser/snapshots/dsl_parser__sqlite_values__tests__real_value-6.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: 123.3489534"
expression: val
---
Real(
    123.3489534,
)
