dsl/parser/snapshots/dsl_parser__sqlite_values__tests__real_value-8.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: -123.3489534E5"
expression: val
---
Real(
    -12334895.34,
)
