dsl/parser/snapshots/dsl_parser__sqlite_values__tests__real_value-9.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: -123.3489534E-5"
expression: val
---
Real(
    -0.001233489534,
)
