dsl/parser/snapshots/dsl_parser__sqlite_values__tests__real_value.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: 1.0"
expression: val
---
Real(
    1.0,
)
