dsl/parser/snapshots/dsl_parser__sqlite_values__tests__single_row_value-2.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: [true, \"hi\"]"
expression: val
---
[
    [
        Integer(
            1,
        ),
        Text(
            "hi",
        ),
    ],
]
