dsl/parser/snapshots/dsl_parser__sqlite_values__tests__single_row_value-3.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: [1, \"hi\", 1.0, x\"1240\"]"
expression: val
---
[
    [
        Integer(
            1,
        ),
        Text(
            "hi",
        ),
        Real(
            1.0,
        ),
        Blob(
            [
                18,
                64,
            ],
        ),
    ],
]
