dsl/parser/snapshots/dsl_parser__sqlite_values__tests__single_row_value-4.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: [1]"
expression: val
---
[
    [
        Integer(
            1,
        ),
    ],
]
