dsl/parser/snapshots/dsl_parser__sqlite_values__tests__single_row_value.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: [Null, 1]"
expression: val
---
[
    [
        Null,
        Integer(
            1,
        ),
    ],
]
