dsl/parser/snapshots/dsl_parser__sqlite_values__tests__single_value-2.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: true"
expression: val
---
[
    [
        Integer(
            1,
        ),
    ],
]
