dsl/parser/snapshots/dsl_parser__sqlite_values__tests__single_value-3.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: 1"
expression: val
---
[
    [
        Integer(
            1,
        ),
    ],
]
